# OpenCoder

./: .env  ASSIGNMENT.md  Cargo.toml  README.md  settings.toml
src/: commands.rs  config.rs  main.rs
src/app/: config.rs  mod.rs  runner.rs
src/cli/: banner.rs  mod.rs  output.rs  prompt.rs
src/commands/: command.rs  mod.rs  parser.rs  registry.rs
src/commands/handlers/: exit.rs  help.rs  mod.rs  set.rs
src/domain/: mod.rs
src/domain/chat/: mod.rs
src/domain/model/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: mod.rs
src/infrastructure/lm/: client.rs  mod.rs
src/infrastructure/storage/: history_store.rs  mod.rs
src/lm/: client.rs  http.rs  mod.rs
src/utils/: logging.rs  mod.rs
