[package]
name = "OpenCoder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1.10.1"
cfonts = "1.3.0"
chrono = { version = "0.4.42", features = ["serde"] }
crossterm = "0.29.0"
config = "0.15.17"
dialoguer = { version = "0.12.0"}
dotenvy = "0.15.7"
futures = "0.3.31"
hyper = { version = "1.7.0", features = ["full"] }
indicatif = "0.18.1"
once_cell = "1.21.3"
owo-colors = "4.2.3"
regex = "1.11.3"
reqwest = { version = "0.12.23", features = ["json", "stream", "multipart"] }
reqwest-eventsource = "0.6.0"
rustls = "0.23.32"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
